# edf-rs

./: .gitignore  Cargo.toml  README.md  shell.nix
code_tests/: EDF+ normal.edf
src/: file.rs  lib.rs  record.rs  save.rs  tests.rs  utils.rs
src/error/: edf_error.rs  mod.rs
src/headers/: annotation_list.rs  edf_header.rs  mod.rs  patient.rs  recording.rs  signal_header.rs
