[package]
name = "edf-rs"
version = "0.1.0"

authors = ["BitFlaker"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BitFlaker/edf-rs"
readme = "README.md"

description = "Pure Rust implementation of a reader and writer for EDF/EDF+ (European Data Format) files"
keywords = ["European-Data-Format", "EDF+", "EDF-File", "EEG", "signal"]
categories = ["science::bioinformatics", "science::neuroscience", "filesystem", "parsing"]

edition = "2024"

exclude = [
    "code_tests/*",
    "shell.nix",
]

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
sha2 = "0.10.9"
